Project

General

Profile

Actions

Bug #61453

closed

the mgr, osd version information missing in "ceph versions" command during cluster upgrade

Added by Prashant D 12 months ago. Updated 8 months ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
reef, quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We were doing gibba cluster upgrade from quincy to reef and observed that ceph versions output was missing the mgr and osd version information:

[root@gibba001 RGWtest-warp]# ceph -s
  cluster:
    id:     6668e536-ea81-11ed-9033-3cecef3d8fb8
    health: HEALTH_WARN
            93 pgs not deep-scrubbed in time

  services:
    mon: 5 daemons, quorum gibba001,gibba005,gibba003,gibba004,gibba002 (age 2m)
    mgr: gibba008.luyxql(active, since 6m), standbys: gibba006.barapy
    osd: 62 osds: 62 up (since 3w), 62 in (since 3w)
    rgw: 6 daemons active (6 hosts, 1 zones)

  data:
    pools:   8 pools, 1281 pgs
    objects: 121.50k objects, 5.3 GiB
    usage:   66 GiB used, 10 TiB / 11 TiB avail
    pgs:     1281 active+clean

  io:
    client:   152 MiB/s rd, 102 MiB/s wr, 51.80k op/s rd, 40.24k op/s wr

  progress:
    Upgrade to 18.0.0-3449-gb3947a04 (2m)
      [............................] (remaining: 80m)

[root@gibba001 RGWtest-warp]# ceph versions
{
    "mon": {
        "ceph version 18.0.0-3449-gb3947a04 (b3947a044aff335ec204719c81d65810e50ce88f) reef (dev)": 5
    },
    "rgw": {
        "ceph version 17.2.6-274-gca575548 (ca57554831d5750ec2b5720a7ff73845615ea772) quincy (stable)": 6
    },
    "overall": {
        "ceph version 17.2.6-274-gca575548 (ca57554831d5750ec2b5720a7ff73845615ea772) quincy (stable)": 6,
        "ceph version 18.0.0-3449-gb3947a04 (b3947a044aff335ec204719c81d65810e50ce88f) reef (dev)": 5
    }
}


Related issues 3 (1 open2 closed)

Related to RADOS - Bug #57585: ceph versions : mds : remove empty list entries from ceph versionsPending BackportShreyansh Sancheti

Actions
Copied to RADOS - Backport #61474: reef: the mgr, osd version information missing in "ceph versions" command during cluster upgrade ResolvedPrashant DActions
Copied to RADOS - Backport #61569: quincy: the mgr, osd version information missing in "ceph versions" command during cluster upgrade ResolvedPrashant DActions
Actions #1

Updated by Prashant D 12 months ago

  • Description updated (diff)
Actions #2

Updated by Vikhyat Umrao 12 months ago

PR - https://github.com/ceph/ceph/pull/48136 that might have caused the regression.

Actions #3

Updated by Paul Cuzner 12 months ago

I see something similar on a new Reef cluster (18.0.0-3449-gb3947a04)

in my case, ceph versions only shows the mons

[ceph: root@f08-h03-000-1029u /]# ceph versions
{
    "mon": {
        "ceph version 18.0.0-3449-gb3947a04 (b3947a044aff335ec204719c81d65810e50ce88f) reef (dev)": 5
    },
    "overall": {
        "ceph version 18.0.0-3449-gb3947a04 (b3947a044aff335ec204719c81d65810e50ce88f) reef (dev)": 5
    }
}

And yet there are 47 OSDs, 2 mgr's as shown below

[ceph: root@f08-h03-000-1029u /]# ceph -s
  cluster:
    id:     6b62d0dc-fb44-11ed-80dc-ac1f6b7d14b0
    health: HEALTH_OK
            Some pool(s) have the noscrub, nodeep-scrub flag(s) set

  services:
    mon: 5 daemons, quorum f08-h03-000-1029u,f08-h05-000-1029u,f08-h07-000-1029u,f09-h03-000-1029u,f04-h04-000-1029u (age 95m)
    mgr: f08-h03-000-1029u.ikbuyf(active, since 99m), standbys: f08-h05-000-1029u.lykszo
    osd: 47 osds: 47 up (since 91m), 47 in (since 92m)

  data:
    pools:   2 pools, 2049 pgs
    objects: 1.54M objects, 5.9 TiB
    usage:   18 TiB used, 23 TiB / 41 TiB avail
    pgs:     2049 active+clean

  io:
    client:   1.1 GiB/s rd, 235 MiB/s wr, 150.58k op/s rd, 30.02k op/s wr

Actions #4

Updated by Prashant D 12 months ago

  • Status changed from New to Fix Under Review
  • Assignee set to Prashant D
  • Pull request ID set to 51765
Actions #5

Updated by Neha Ojha 11 months ago

  • Related to Bug #57585: ceph versions : mds : remove empty list entries from ceph versions added
Actions #6

Updated by Prashant D 11 months ago

  • Backport set to reef, quincy
Actions #7

Updated by Prashant D 11 months ago

  • Description updated (diff)
Actions #8

Updated by Prashant D 11 months ago

  • Copied to Backport #61474: reef: the mgr, osd version information missing in "ceph versions" command during cluster upgrade added
Actions #10

Updated by Radoslaw Zarzynski 11 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #11

Updated by Backport Bot 11 months ago

  • Copied to Backport #61569: quincy: the mgr, osd version information missing in "ceph versions" command during cluster upgrade added
Actions #12

Updated by Backport Bot 11 months ago

  • Tags set to backport_processed
Actions #13

Updated by Prashant D 8 months ago

  • Status changed from Pending Backport to Resolved

Backport PRs had been merged in upstream branches.

Actions

Also available in: Atom PDF