mon: Fix ceph versions command

The commit-id 506e29f has introduced a bug where mgr/osd/mds
version information goes missing during the cluster upgrade.
Collect version information before checking the emptiness
of the map.

Fixes: https://tracker.ceph.com/issues/61453

Signed-off-by: Prashant D <pdhange@redhat.com>